Alignment issues

--- a/client/react-css/NewQuote.scss
+++ b/client/react-css/NewQuote.scss
@@ -101,6 +101,7 @@
     }
 
     td.unit-price-column input {
+      text-align: right;
       width: calc(100% - 4px);
     }
 
